test/tools/javac/annotations/annotationsInComments/Test10.out
Test10.java:10:22: compiler.err.doesnt.exist: my.fully.qualified
1 error